Added in-built Base64 encoder.