@@ -12,7 +12,6 @@ public class Networking
 		
 	}
 	
-	@SuppressWarnings("restriction")
 	public String httpRequest(String server, int port, String username, String password, String method, String destination, String data)
 	{
 		String response = null;
@@ -25,7 +24,7 @@ public class Networking
 			httpUrlConnection.setRequestMethod(method);		
 			httpUrlConnection.setConnectTimeout(10000);
 			String loginDetails = username + ":" + password;
-			String loginDetailsBase64 = new sun.misc.BASE64Encoder().encode(loginDetails.getBytes());
+			String loginDetailsBase64 = external.Base64.encodeBytes(loginDetails.getBytes());
 			httpUrlConnection.setRequestProperty ("Authorization", "Basic " + loginDetailsBase64);
 			
 			if (data.length() > 0)
